# ai-skill-agent

./: .gitignore  README.md  cli.py  flow.md  pyproject.toml  skill.build  skill.improve  verification.py
.claude/skills/desync-behavior-check/: SKILL.md
.claude/skills/desync-behavior-check/references/misc/: overview.md
.claude/skills/excalidraw/references/: export.md
.gemini/skills/echo/scripts/: scaffold.sh
.kiro/skills/excalidraw/: README.md  SKILL.md
.kiro/skills/reactflow-v12/: SKILL.md
skills/echo/references/api/: guide-cookies.md  guide-request.md  guide-response.md  guide-start-server.md  guide-templates.md
skills/echo/references/examples/: core-patterns.md
skills/echo/references/patterns/: middleware-body-dump.md  middleware-body-limit.md  middleware-decompress.md  middleware-logger.md  middleware-method-override.md  middleware-recover.md  middleware-request-id.md  middleware-rewrite.md
skills/engineering-discipline/references/architecture/: output-format.md
skills/golang-design-pattern/references/examples/: concurrency-error-testing.md  structural-behavioral-patterns.md
skills/lenis-react/: SKILL.md
skills/lenis-react/references/examples/: full-integration-guide.md
skills/lenis-react/references/patterns/: setup-and-integration-rules.md
skills/reactflow-v12/references/api/: reactflow-component-and-components.md
skills/reactflow-v12/references/examples/: custom-nodes-edges-and-core-workflows.md
skills/reactflow-v12/references/patterns/: layout-grouping-and-validation.md
skills/reactflow/references/examples/: quickstart.md
(+33 files in other folders)
